--- a/components/taskList/task-list.css
+++ b/components/taskList/task-list.css
@@ -5,6 +5,7 @@
     padding: 1rem 1.5rem;
     background-color: rgba(255, 255, 255, 0.405);
     border-radius: 15px;
+    position: relative;
 }
 
 .task-title {
@@ -39,4 +40,21 @@
 .task-control button {
     border: none;
     background-color: unset;
+}
+
+.completed {
+    background-color: rgba(125, 4, 4, 0.405);
+    border: 1px solid rgba(255, 0, 0, 0.544);
+    transition: 0.6s all;
+}
+
+.completed-message {
+    text-align: center;
+    position: absolute;
+    align-self: center;
+    margin-block-start: 1rem;
+    font-weight: 600;
+    font-size: 20px;
+    color: rgb(148, 25, 25);
+    transform: translateY(0);
 }
