--- a/components/taskList/task-list.css
+++ b/components/taskList/task-list.css
@@ -79,6 +79,8 @@
 .save-edit-mode {
     border: none;
     padding: 5px 10px;
+    block-size: fit-content;
+    margin-block-start: auto;
     border-radius: 15px;
     background-color: rgb(17, 137, 129);
     color: aliceblue;
@@ -95,6 +97,8 @@
     border: none;
     padding: 5px 10px;
     border-radius: 15px;
+    block-size: fit-content;
+    margin-block-start: auto;
     background-color: rgb(184, 25, 25);
     color: aliceblue;
     cursor: pointer;
@@ -104,5 +108,8 @@
 .cancel-edit-mode:hover {
     background-color: rgb(162, 19, 19);
     box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.363);
+}
 
+.edit-mode h4 {
+    font-size: 14px;
 }
