--- a/src/index.css
+++ b/src/index.css
@@ -68,9 +68,10 @@ a {
         inline-size: 100%;
     }
 
-    .task-title,
-    .task-control p {
+
+    .task-title {
         font-size: 16px;
+        text-align: start;
     }
 
     .task-control {
@@ -79,6 +80,10 @@ a {
 
     .task-control p {
         margin-block-end: 1rem;
+    }
+
+    .description p {
+        font-size: 14px;
     }
 
     .edit-mode {
